2010-07-14  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/DlvhexSolver.h: Updated to revised ASPSolver API.
	* src/OpRelationMerging.cpp: Likewise.
	* src/DlvhexSolver.cpp: Likewise.
	* src/HexAnswerCache.cpp: Likewise.
	* src/OpDalal.cpp: Likewise.

2010-07-07  Peter Schueller  <ps@kr.tuwien.ac.at>

	* mpcompiler/src/Makefile.am: Added missing boost CPPFLAGS.

2010-06-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac (BOOST_REQUIRE): Require boost >= 1.41.

2010-04-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* AUTHORS: Fix content.
	* NEWS: Likewise.

2010-04-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/Makefile.am (AUTOMAKE_OPTIONS): Remove.
	* include/Makefile.am: Likewise.
	* examples/testoperators/Makefile.am: Likewise.